force-app/main/default/objects/edynamics__Chatter_Queue_Settings__c/edynamics__Chatter_Queue_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Chatter Queue Settings</label>
</CustomObject>