force-app/main/default/objects/edynamics__Chatter_Queue_Settings__c/fields/edynamics__Enqueue_Max_Time__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Enqueue_Max_Time__c</fullName>
    <label>Enqueue Max Time</label>
    <type>DateTime</type>
</CustomField>