force-app/main/default/objects/edynamics__Chatter_Queue_Settings__c/fields/edynamics__Items_Per_Batch__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Items_Per_Batch__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Items Per Batch</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>