force-app/main/default/objects/edynamics__Chatter_Queue_Settings__c/fields/edynamics__Scheduled_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Scheduled_Job_Id__c</fullName>
    <label>Scheduled Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>