force-app/main/default/objects/edynamics__Chatter_Queue_Settings__c/fields/edynamics__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>edynamics__Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>